kubernetes/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: httpserver
  name: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpserver
    spec:
      containers:
      - image: registry.vmx.obenes-training.com/kurz/obenes
        name: obenes
        resources: {}
      imagePullSecrets:
        - name: pull-secret
status: {}
