kubernetes/15-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: httpserver.vmx.obenes-training.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpserver
            port:
              number: 8080
  tls:
  - hosts:
      - httpserver.vmx.obenes-training.com
    secretName: httpserver.vmx.obenes-training.com-tls
